# fortnum

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  fpm.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: clean-room-implementation.md  module-port.md
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  README.md  baseline.json  bench_ad_overheads.f90  bench_main.f90  fortnum_benchmark.f90  gate.py
cmake/: FortnumAddEnzymeTest.cmake  FortnumEnzyme.cmake
docs/: api.md  design.md  migration_libneo.md  migration_libneo_ad.md
docs/design/: ad.md  downstream_ad.md  enzyme_toolchain.md  integrate.md  ode.md  optimizer_api.md  rng.md
examples/: CMakeLists.txt
examples/downstream/scalar_objective/: scalar_objective.f90
examples/downstream/vector_residual/: vector_residual.f90
include/: fortnum.h
scripts/: audit_modules.py
src/: CMakeLists.txt  fortnum_kinds.f90  fortnum_status.f90  fortnum_version.f90
src/ad/: fortnum_active_vector.f90  fortnum_ad_interfaces.f90
src/bindings/: fortnum_capi.f90  fortnum_capi_bspline.f90  fortnum_capi_rk8pd.f90
src/fft/: fortnum_fft.f90
src/interp/: fortnum_bspline.f90  fortnum_interp.f90  fortnum_polynomial.f90
src/linalg/: fortnum_linalg.f90
src/ode/: fortnum_ode.f90  fortnum_ode_cash_karp.f90  fortnum_ode_ddeabm.f90  fortnum_ode_dop853.f90  fortnum_ode_events.f90  fortnum_ode_rk8pd.f90  fortnum_ode_vode.f90  fortnum_ode_wrapper.f90
src/quadrature/: fortnum_cquad.f90  fortnum_integrate.f90  fortnum_integrate_gk.f90  fortnum_levin.f90  fortnum_quadrature.f90
src/rng/: fortnum_rng.f90
src/roots/: fortnum_multiroot.f90  fortnum_multiroot_rc.f90  fortnum_roots.f90  fortnum_roots_complex.f90
src/special/: fortnum_special.f90  fortnum_special_bessel.f90  fortnum_special_complex_bessel.f90  fortnum_special_dawson.f90  fortnum_special_erf_cbind.f90  fortnum_special_gamma.f90  fortnum_special_hypergeometric_1f1.f90
src/testing/: fortnum_oracle.f90
test/: CMakeLists.txt  test_fortnum_kinds.f90  test_fortnum_smoke.f90  test_fortnum_status.f90
test/ad/: CMakeLists.txt  fortnum_ad_test_utils.f90  test_bspline_ad.f90  test_complex_bessel_ad.f90  test_complex_step.f90  test_dot_products.f90  test_enzyme_vs_analytic.f90  test_erf_cbind_ad.f90  test_fft_ad.f90  test_finite_difference.f90  test_hyperg_ad.f90  test_integrate_ad.f90  test_interp_ad.f90  test_ode_ad.f90  test_optimizer_api.f90  test_quadrature_ad.f90  test_roots_ad.f90  test_special_ad.f90
test/ad/smoke/: array_sum.f90  dot_product.f90  square.f90
test/capi/: smoke.c
test/concurrency/: test_concurrency_fft.f90  test_concurrency_integrate.f90  test_concurrency_ode.f90  test_concurrency_rng.f90  test_concurrency_roots_interp.f90  test_concurrency_special.f90
test/fft/: test_fortnum_fft.f90
test/interp/: test_fortnum_interp.f90  test_fortnum_polynomial.f90
test/linalg/: test_fortnum_linalg.f90
test/ode/: test_fortnum_ode_cash_karp.f90  test_fortnum_ode_ddeabm.f90  test_fortnum_ode_dop853.f90  test_fortnum_ode_events.f90  test_fortnum_ode_rk8pd.f90  test_fortnum_ode_vode.f90  test_fortnum_ode_wrapper.f90
test/oracle/: gen_bspline.py  gen_complex_bessel.py  gen_complex_bessel_halfplane.py  gen_complex_roots_tables.py  gen_cquad_tables.py  gen_dop853_tables.py  gen_gen_laguerre_tables.py  gen_hyperg_tables.py  gen_integrate_singular_tables.py  gen_integrate_tables.py  gen_levin_tables.py  gen_m1_tables.py  gen_m3_tables.py  gen_multiroot_tables.py  gen_oracle.py  generate_ode_references.py  test_fortnum_bspline_oracle.f90  test_fortnum_complex_roots_oracle.f90  test_fortnum_cquad_oracle.f90  test_fortnum_dop853_oracle.f90  test_fortnum_fft_oracle.f90  test_fortnum_gen_laguerre_oracle.f90  test_fortnum_integrate_gk_oracle.f90  test_fortnum_integrate_oracle.f90  test_fortnum_integrate_singular_oracle.f90  test_fortnum_levin_oracle.f90  test_fortnum_multiroot_oracle.f90  test_fortnum_ode_oracle.f90  test_fortnum_quadrature_oracle.f90  test_fortnum_roots_brent_oracle.f90  test_fortnum_roots_oracle.f90  test_fortnum_special_bessel_oracle.f90  test_fortnum_special_complex_bessel_oracle.f90  test_fortnum_special_dawson_oracle.f90  test_fortnum_special_erf_cbind_oracle.f90  test_fortnum_special_gamma_oracle.f90  test_fortnum_special_hyperg_oracle.f90  test_oracle_selftest.f90
test/oracle/data/: argsort.csv  bessel.csv  bspline.csv  complex_bessel.csv  complex_bessel_halfplane.csv  complex_roots.csv  cquad.csv  dawson.csv  deriv_central.csv  dop853_decay.csv  dop853_growth.csv  dop853_harmonic.csv  erf.csv  erfc.csv  fft_c2c.csv  gamma.csv  gauss_gen_laguerre.csv  gauss_legendre.csv  hyperg_1f1.csv  integrate_gk.csv  integrate_qag_smooth.csv  integrate_qagiu_infinite.csv  integrate_qagp_singular.csv  integrate_qags_singular.csv  levin_u.csv  lower_incomplete_gamma.csv  multiroot.csv  ode_decay.csv  ode_growth.csv  ode_harmonic.csv  ode_linear.csv  roots.csv  roots_brent.csv
test/quadrature/: test_fortnum_cquad.f90  test_fortnum_integrate.f90  test_fortnum_integrate_gk.f90  test_fortnum_integrate_singular.f90  test_fortnum_quadrature.f90
test/rng/: test_fortnum_rng.f90
test/roots/: test_fortnum_multiroot_rc.f90  test_fortnum_region_roots_converge.f90  test_fortnum_roots.f90  test_fortnum_roots_brent.f90  test_fortnum_roots_multiplicity.f90
test/special/: test_fortnum_complex_bessel_halfplane.f90  test_fortnum_hyperg_1f1m.f90  test_fortnum_special_bessel.f90  test_fortnum_special_complex_bessel.f90  test_fortnum_special_dawson.f90  test_fortnum_special_gamma.f90  test_fortnum_special_reexport.f90
